--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,7 +53,7 @@ stages:
     variables:
     - group: Release
     strategy:
-     runsOnce:
+     runOnce:
         deploy:
           steps:
           - download: current
